--- a/views/monitors-list-block.html
+++ b/views/monitors-list-block.html
@@ -18,7 +18,7 @@
 				{{ else }}
 				<span class="badge bg-red ms-auto"></span>
 				{{ end }}
-				<a href="/monitor/{{ .ID }}">{{ .Name }}</a>
+				<a href="/monitor/{{.ProjectID}}/{{.ID}}">{{ .Name }}</a>
 		</td>
 		<td class="sort-city">{{ .Status }}</td>
 
