--- a/views/projects.html
+++ b/views/projects.html
@@ -72,6 +72,7 @@
 																</a>
 														</div>
 
+														<h2>Projects</h2>
 														<div class="card">
 																<div class="card-body">
 																		<div id="table-default" class="table-responsive">
