--- a/views/modals.html
+++ b/views/modals.html
@@ -28,15 +28,6 @@
 														</div>
 												</div>
 										</div>
-										<div class="col-lg-4">
-												<div class="mb-3">
-														<label class="form-label">Visibility</label>
-														<select class="form-select">
-																<option value="private">Private</option>
-																<option value="public" selected>Public</option>
-														</select>
-												</div>
-										</div>
 								</div>
 						</div>
 						<div class="modal-footer">
@@ -100,8 +91,8 @@
 
 
 {{ define "webhook-alert" }}
-<form class="modal modal-blur fade" id="webhook-alert" tabindex="-1" role="dialog" hx-swap="beforeend" hx-put="" hx-target="body" aria-hidden="true">
-		<!-- <input type="text" name="monitor_id" value={{.Monitor.ID}} hidden> -->
+<form class="modal modal-blur fade" id="webhook-alert" tabindex="-1" role="dialog" hx-swap="beforeend" hx-target="body" aria-hidden="true" hx-put="/monitor/{{.Monitor.ID}}/integrations">
+		<input type="text" name="alert_type" value="webhook" hidden>
 		<div class="modal-dialog modal-lg modal-dialog-centered" role="document">
 				<div class="modal-content">
 						<div class="modal-header">
@@ -111,11 +102,7 @@
 						<div class="modal-body">
 								<div class="mb-3 row align-items-center">
 										<div class="col">
-												{{ if .MonitorAlertIntegrations.WebhookIntegrationEnabled }}
-												<input type="text" name="webhook_target" class="form-control" value="{{.MonitorAlertIntegrations.WebhookIntegration.AlertTarget}}">
-												{{ else }}
-												<input type="text" name="webhook_target" class="form-control" value="">
-												{{ end }}
+												<input type="text" name="alert_target" class="form-control" value="{{.MonitorAlertIntegrations.WebhookIntegration.AlertTarget}}">
 										</div>
 										<div class="col-auto">
 												<label class="form-check form-check-single form-switch">
