clean up code, add conditional favicons

--- a/views/forgot-password.html
+++ b/views/forgot-password.html
@@ -1,12 +1,4 @@
 <!doctype html>
-<!--
-* Tabler - Premium and Open Source dashboard template with responsive and high quality UI.
-* @version 1.0.0-beta20
-* @link https://tabler.io
-* Copyright 2018-2023 The Tabler Authors
-* Copyright 2018-2023 codecalm.net Paweł Kuna
-* Licensed under MIT (https://github.com/tabler/tabler/blob/master/LICENSE)
--->
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -16,8 +8,7 @@
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>
-      Forgot password - Tabler - Premium and Open Source dashboard template with
-      responsive and high quality UI.
+      Forgot password - outagealert
     </title>
     {{ template "base" }}
   </head>
@@ -60,7 +51,6 @@
             </div>
             <div class="form-footer">
               <button type="submit" class="btn btn-primary w-100">
-                <!-- Download SVG icon from http://tabler-icons.io/i/mail -->
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   class="icon"
@@ -90,7 +80,6 @@
       </div>
     </div>
     <!-- Libs JS -->
-    <!-- Tabler Core -->
     <script src="/static/js/tabler.min.js?1692870487" defer></script>
     <script src="/static/js/demo.min.js?1692870487" defer></script>
   </body>
