--- a/views/signup.html
+++ b/views/signup.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <title>Sign up - Tabler - Premium and Open Source dashboard template with responsive and high quality UI.</title>
+    <title>Signup - outagealert</title>
     <!-- Base files -->
 		{{ template "base" }}
   </head>
@@ -36,7 +36,7 @@
               <div class="input-group input-group-flat">
 									<input name="password" type="password" class="form-control"  placeholder="Password" autocomplete="off" required>
                 <span class="input-group-text">
-                  <a href="#" class="link-secondary" title="Show password" data-bs-toggle="tooltip"><!-- Download SVG icon from http://tabler-icons.io/i/eye -->
+                  <a href="#" class="link-secondary" title="Show password" data-bs-toggle="tooltip">
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M10 12a2 2 0 1 0 4 0a2 2 0 0 0 -4 0" /><path d="M21 12c-2.4 4 -5.4 6 -9 6c-3.6 0 -6.6 -2 -9 -6c2.4 -4 5.4 -6 9 -6c3.6 0 6.6 2 9 6" /></svg>
                   </a>
                 </span>
@@ -59,8 +59,6 @@
       </div>
 
     </div>
-    <!-- Libs JS -->
-    <!-- Tabler Core -->
     <script src="/static/js/tabler.min.js?1692870487" defer></script>
     <script src="/static/js/demo.min.js?1692870487" defer></script>
   </body>
