--- a/views/base.html
+++ b/views/base.html
@@ -1,34 +1,83 @@
+{{ define "up-favicons" }}
+<link rel="apple-touch-icon" sizes="180x180" href="/static/img/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/static/img/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/static/img/favicon-16x16.png">
+<link rel="manifest" href="/static/img/site.webmanifest">
+<link rel="shortcut icon" href="/static/img/favicon.ico">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="msapplication-config" content="/static/img/browserconfig.xml">
+<meta name="theme-color" content="#ffffff">
+{{ end }}
+
+{{ define "warn-favicons" }}
+<link rel="apple-touch-icon" sizes="180x180" href="/static/img/warn-apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/static/img/warn-favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/static/img/warn-favicon-16x16.png">
+<link rel="manifest" href="/static/img/site.webmanifest">
+<link rel="shortcut icon" href="/static/img/warn-favicon.ico">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="msapplication-config" content="/static/img/browserconfig.xml">
+<meta name="theme-color" content="#ffffff">
+{{ end }}
+
+{{ define "down-favicons" }}
+<link rel="apple-touch-icon" sizes="180x180" href="/static/img/down-apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/static/img/down-favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/static/img/down-favicon-16x16.png">
+<link rel="manifest" href="/static/img/site.webmanifest">
+<link rel="shortcut icon" href="/static/img/down-favicon.ico">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="msapplication-config" content="/static/img/browserconfig.xml">
+<meta name="theme-color" content="#ffffff">
+{{ end }}
+
 {{ block "base" . }}
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="/static/css/tabler.min.css?1692870487" rel="stylesheet"/>
-<link href="/static/css/tabler-flags.min.css?1692870487" rel="stylesheet"/>
-<link href="/static/css/tabler-payments.min.css?1692870487" rel="stylesheet"/>
-<link href="/static/css/tabler-vendors.min.css?1692870487" rel="stylesheet"/>
-<link href="/static/css/demo.min.css?1692870487" rel="stylesheet"/>
-<script src="https://unpkg.com/htmx.org@2.0.1"></script>
+<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link href="/static/css/tabler.min.css?1692870487" rel="stylesheet"/>
+		<link href="/static/css/tabler-flags.min.css?1692870487" rel="stylesheet"/>
+		<link href="/static/css/tabler-payments.min.css?1692870487" rel="stylesheet"/>
+		<link href="/static/css/tabler-vendors.min.css?1692870487" rel="stylesheet"/>
+		<link href="/static/css/demo.min.css?1692870487" rel="stylesheet"/>
+		<script src="https://unpkg.com/htmx.org@2.0.1"></script>
+		{{ if .Monitor.Status }}
+				{{ if eq .Monitor.Status "up" }}
+						{{ template "up-favicons" . }}
+				{{ else if eq .Monitor.Status "grace_period" }}
+						{{ template "warn-favicons" . }}
+				{{ else }}
+						{{ template "down-favicons" . }}
+				{{ end }}
+		{{ else }}
+				{{ template "up-favicons" . }}
+		{{ end }}
+</head>
 <style>
 .alert-container {
-		position: fixed;
-		top: 1rem;
-		right: 1rem;
-		z-index: 1050;
-		max-width: 300px;
+position: fixed;
+top: 1rem;
+right: 1rem;
+z-index: 1050;
+max-width: 300px;
 }
 .table-enhanced tbody td {
-		font-weight: 500;
-		font-size: 1rem;
+font-weight: 500;
+font-size: 1rem;
 }
 .table-enhanced thead th {
-		font-weight: 600;
-		font-size: 1.05rem;
-		text-transform: uppercase;
+font-weight: 600;
+font-size: 1.05rem;
+text-transform: uppercase;
 }
 @import url('https://rsms.me/inter/inter.css');
 :root {
-		--tblr-font-sans-serif: 'Inter Var', -apple-system, BlinkMacSystemFont, San Francisco, Segoe UI, Roboto, Helvetica Neue, sans-serif;
+--tblr-font-sans-serif: 'Inter Var', -apple-system, BlinkMacSystemFont, San Francisco, Segoe UI, Roboto, Helvetica Neue, sans-serif;
 }
 body {
-		font-feature-settings: "cv03", "cv04", "cv11";
+font-feature-settings: "cv03", "cv04", "cv11";
+}
+#user:hover {
+		cursor: pointer;
 }
 </style>
 <body>
@@ -39,108 +88,22 @@ body {
 								<span class="navbar-toggler-icon"></span>
 						</button>
 						<h1 class="navbar-brand navbar-brand-autodark d-none-navbar-horizontal pe-0 pe-md-3">
-								<a href=".">
+								<a href="/">
 										<img src="/static/img/logo.svg" width="110" height="32" alt="outagealert.io" class="navbar-brand-image">
 								</a>
 						</h1>
 						<div class="navbar-nav flex-row order-md-last">
 								<div class="d-none d-md-flex">
 										<a href="?theme=dark" class="nav-link px-0 hide-theme-dark" title="Enable dark mode" data-bs-toggle="tooltip"
-																																																				 data-bs-placement="bottom">
-												<!-- Download SVG icon from http://tabler-icons.io/i/moon -->
+												data-bs-placement="bottom">
 												<svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 3c.132 0 .263 0 .393 0a7.5 7.5 0 0 0 7.92 12.446a9 9 0 1 1 -8.313 -12.454z" /></svg>
 										</a>
 										<a href="?theme=light" class="nav-link px-0 hide-theme-light" title="Enable light mode" data-bs-toggle="tooltip"
-																																																						data-bs-placement="bottom">
-												<!-- Download SVG icon from http://tabler-icons.io/i/sun -->
+												data-bs-placement="bottom">
 												<svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 12m-4 0a4 4 0 1 0 8 0a4 4 0 1 0 -8 0" /><path d="M3 12h1m8 -9v1m8 8h1m-9 8v1m-6.4 -15.4l.7 .7m12.1 -.7l-.7 .7m0 11.4l.7 .7m-12.1 -.7l-.7 .7" /></svg>
 										</a>
-										<div class="nav-item dropdown d-none d-md-flex me-3">
-												<a href="#" class="nav-link px-0" data-bs-toggle="dropdown" tabindex="-1" aria-label="Show notifications">
-														<!-- Download SVG icon from http://tabler-icons.io/i/bell -->
-														<svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M10 5a2 2 0 1 1 4 0a7 7 0 0 1 4 6v3a4 4 0 0 0 2 3h-16a4 4 0 0 0 2 -3v-3a7 7 0 0 1 4 -6" /><path d="M9 17v1a3 3 0 0 0 6 0v-1" /></svg>
-														<span class="badge bg-red"></span>
-												</a>
-												<div class="dropdown-menu dropdown-menu-arrow dropdown-menu-end dropdown-menu-card">
-														<div class="card">
-																<div class="card-header">
-																		<h3 class="card-title">Last updates</h3>
-																</div>
-																<div class="list-group list-group-flush list-group-hoverable">
-																		<div class="list-group-item">
-																				<div class="row align-items-center">
-																						<div class="col-auto"><span class="status-dot status-dot-animated bg-red d-block"></span></div>
-																						<div class="col text-truncate">
-																								<a href="#" class="text-body d-block">Example 1</a>
-																								<div class="d-block text-secondary text-truncate mt-n1">
-																										Change deprecated html tags to text decoration classes (#29604)
-																								</div>
-																						</div>
-																						<div class="col-auto">
-																								<a href="#" class="list-group-item-actions">
-																										<!-- Download SVG icon from http://tabler-icons.io/i/star -->
-																										<svg xmlns="http://www.w3.org/2000/svg" class="icon text-muted" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z" /></svg>
-																								</a>
-																						</div>
-																				</div>
-																		</div>
-																		<div class="list-group-item">
-																				<div class="row align-items-center">
-																						<div class="col-auto"><span class="status-dot d-block"></span></div>
-																						<div class="col text-truncate">
-																								<a href="#" class="text-body d-block">Example 2</a>
-																								<div class="d-block text-secondary text-truncate mt-n1">
-																										justify-content:between ⇒ justify-content:space-between (#29734)
-																								</div>
-																						</div>
-																						<div class="col-auto">
-																								<a href="#" class="list-group-item-actions show">
-																										<!-- Download SVG icon from http://tabler-icons.io/i/star -->
-																										<svg xmlns="http://www.w3.org/2000/svg" class="icon text-yellow" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z" /></svg>
-																								</a>
-																						</div>
-																				</div>
-																		</div>
-																		<div class="list-group-item">
-																				<div class="row align-items-center">
-																						<div class="col-auto"><span class="status-dot d-block"></span></div>
-																						<div class="col text-truncate">
-																								<a href="#" class="text-body d-block">Example 3</a>
-																								<div class="d-block text-secondary text-truncate mt-n1">
-																										Update change-version.js (#29736)
-																								</div>
-																						</div>
-																						<div class="col-auto">
-																								<a href="#" class="list-group-item-actions">
-																										<!-- Download SVG icon from http://tabler-icons.io/i/star -->
-																										<svg xmlns="http://www.w3.org/2000/svg" class="icon text-muted" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z" /></svg>
-																								</a>
-																						</div>
-																				</div>
-																		</div>
-																		<div class="list-group-item">
-																				<div class="row align-items-center">
-																						<div class="col-auto"><span class="status-dot status-dot-animated bg-green d-block"></span></div>
-																						<div class="col text-truncate">
-																								<a href="#" class="text-body d-block">Example 4</a>
-																								<div class="d-block text-secondary text-truncate mt-n1">
-																										Regenerate package-lock.json (#29730)
-																								</div>
-																						</div>
-																						<div class="col-auto">
-																								<a href="#" class="list-group-item-actions">
-																										<!-- Download SVG icon from http://tabler-icons.io/i/star -->
-																										<svg xmlns="http://www.w3.org/2000/svg" class="icon text-muted" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 17.75l-6.172 3.245l1.179 -6.873l-5 -4.867l6.9 -1l3.086 -6.253l3.086 6.253l6.9 1l-5 4.867l1.179 6.873z" /></svg>
-																								</a>
-																						</div>
-																				</div>
-																		</div>
-																</div>
-														</div>
-												</div>
-										</div>
 								</div>
-								<div class="nav-item dropdown" hx-trigger="load once" hx-get="/user" hx-swap="innerHTML"></div>
+								<div id="user" class="nav-item dropdown" hx-trigger="load once" hx-get="/user" hx-swap="innerHTML"></div>
 						</div>
 				</div>
 		</header>
