--- a/views/confirm-otp.html
+++ b/views/confirm-otp.html
@@ -12,7 +12,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <title>2-Step Verification - Tabler - Premium and Open Source dashboard template with responsive and high quality UI.</title>
+    <title>2-Step verification - outagealert</title>
 		{{ template "base" }}
   </head>
   <body  class=" d-flex flex-column">
