--- a/views/monitor.html
+++ b/views/monitor.html
@@ -1,20 +1,13 @@
 <!doctype html>
-<!--
-		* Tabler - Premium and Open Source dashboard template with responsive and high quality UI.
-		* @version 1.0.0-beta20
-		* @link https://tabler.io
-		* Copyright 2018-2023 The Tabler Authors
-		* Copyright 2018-2023 codecalm.net Paweł Kuna
-		* Licensed under MIT (https://github.com/tabler/tabler/blob/master/LICENSE)
--->
 <html lang="en">
+		<head>
+		{{ template "base" . }}
+		</head>
 		{{ template "errors" }}
-		{{ template "base" }}
 		{{ template "modal-report" . }}
 		{{ template "email-alert" . }}
 		{{ template "webhook-alert" . }}
 		{{ template "slack-alert" . }}
-		<title>{{ .Monitor.Status }} - {{ .Monitor.Name }}</title>
 		<body >
 				<div class="modal modal-blur fade" id="modal-danger" tabindex="-1" role="dialog" aria-hidden="true">
 						<div class="modal-dialog modal-sm modal-dialog-centered" role="document">
@@ -22,7 +15,6 @@
 										<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 										<div class="modal-status bg-danger"></div>
 										<div class="modal-body text-center py-4">
-												<!-- Download SVG icon from http://tabler-icons.io/i/alert-triangle -->
 												<svg xmlns="http://www.w3.org/2000/svg" class="icon mb-2 text-danger icon-lg" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M10.24 3.957l-8.422 14.06a1.989 1.989 0 0 0 1.7 2.983h16.845a1.989 1.989 0 0 0 1.7 -2.983l-8.423 -14.06a1.989 1.989 0 0 0 -3.4 0z" /><path d="M12 9v4" /><path d="M12 17h.01" /></svg>
 												<h3>Are you sure?</h3>
 												<div class="text-secondary">This operation cannot be undone.</div>
@@ -183,40 +175,6 @@
 												</div>
 										</div>
 								</div>
-								<footer class="footer footer-transparent d-print-none">
-										<div class="container-xl">
-												<div class="row text-center align-items-center flex-row-reverse">
-														<div class="col-lg-auto ms-lg-auto">
-																<ul class="list-inline list-inline-dots mb-0">
-																		<li class="list-inline-item"><a href="https://tabler.io/docs" target="_blank" class="link-secondary" rel="noopener">Documentation</a></li>
-																		<li class="list-inline-item"><a href="./license.html" class="link-secondary">License</a></li>
-																		<li class="list-inline-item"><a href="https://github.com/tabler/tabler" target="_blank" class="link-secondary" rel="noopener">Source code</a></li>
-																		<li class="list-inline-item">
-																				<a href="https://github.com/sponsors/codecalm" target="_blank" class="link-secondary" rel="noopener">
-																						<!-- Download SVG icon from http://tabler-icons.io/i/heart -->
-																						<svg xmlns="http://www.w3.org/2000/svg" class="icon text-pink icon-filled icon-inline" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M19.5 12.572l-7.5 7.428l-7.5 -7.428a5 5 0 1 1 7.5 -6.566a5 5 0 1 1 7.5 6.572" /></svg>
-																						Sponsor
-																				</a>
-																		</li>
-																</ul>
-														</div>
-														<div class="col-12 col-lg-auto mt-3 mt-lg-0">
-																<ul class="list-inline list-inline-dots mb-0">
-																		<li class="list-inline-item">
-																				Copyright &copy; 2023
-																				<a href="." class="link-secondary">Tabler</a>.
-																				All rights reserved.
-																		</li>
-																		<li class="list-inline-item">
-																				<a href="./changelog.html" class="link-secondary" rel="noopener">
-																						v1.0.0-beta20
-																				</a>
-																		</li>
-																</ul>
-														</div>
-												</div>
-										</div>
-								</footer>
 						</div>
 				</div>
 				<!-- Libs JS -->
