--- a/views/projects.html
+++ b/views/projects.html
@@ -1,18 +1,10 @@
 <!doctype html>
-<!--
-		* Tabler - Premium and Open Source dashboard template with responsive and high quality UI.
-		* @version 1.0.0-beta20
-		* @link https://tabler.io
-		* Copyright 2018-2023 The Tabler Authors
-		* Copyright 2018-2023 codecalm.net Paweł Kuna
-		* Licensed under MIT (https://github.com/tabler/tabler/blob/master/LICENSE)
--->
 <html lang="en">
 		<head>
 				<meta charset="utf-8"/>
 				<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
 				<meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-				<title>Datatables - Tabler - Premium and Open Source dashboard template with responsive and high quality UI.</title>
+				<title>Projects - outagealert</title>
 				{{ template "base" }}
 		</head>
 		<body >
@@ -71,12 +63,12 @@
 																						<thead>
 																								<tr>
 																										<th><button class="table-sort" data-sort="sort-name">Name</button></th>
-																										<th><button class="table-sort" data-sort="sort-type">Visibility</button></th>
+																										<th><button class="table-sort" data-sort="sort-name">Created</button></th>
 																								</tr>
 																						</thead>
 																						<tbody class="table-tbody" id="project-list">
 																								{{ range .Projects }}
-																										{{ template "projects-list-block" . }}
+																								{{ template "projects-list-block" . }}
 																								{{ end}}
 																						</tbody>
 																				</table>
@@ -86,48 +78,13 @@
 														</div>
 												</div>
 										</div>
-								<footer class="footer footer-transparent d-print-none">
-										<div class="container-xl">
-												<div class="row text-center align-items-center flex-row-reverse">
-														<div class="col-lg-auto ms-lg-auto">
-																<ul class="list-inline list-inline-dots mb-0">
-																		<li class="list-inline-item"><a href="https://tabler.io/docs" target="_blank" class="link-secondary" rel="noopener">Documentation</a></li>
-																		<li class="list-inline-item"><a href="./license.html" class="link-secondary">License</a></li>
-																		<li class="list-inline-item"><a href="https://github.com/tabler/tabler" target="_blank" class="link-secondary" rel="noopener">Source code</a></li>
-																		<li class="list-inline-item">
-																				<a href="https://github.com/sponsors/codecalm" target="_blank" class="link-secondary" rel="noopener">
-																						<!-- Download SVG icon from http://tabler-icons.io/i/heart -->
-																						<svg xmlns="http://www.w3.org/2000/svg" class="icon text-pink icon-filled icon-inline" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M19.5 12.572l-7.5 7.428l-7.5 -7.428a5 5 0 1 1 7.5 -6.566a5 5 0 1 1 7.5 6.572" /></svg>
-																						Sponsor
-																				</a>
-																		</li>
-																</ul>
-														</div>
-														<div class="col-12 col-lg-auto mt-3 mt-lg-0">
-																<ul class="list-inline list-inline-dots mb-0">
-																		<li class="list-inline-item">
-																				Copyright &copy; 2023
-																				<a href="." class="link-secondary">Tabler</a>.
-																				All rights reserved.
-																		</li>
-																		<li class="list-inline-item">
-																				<a href="./changelog.html" class="link-secondary" rel="noopener">
-																						v1.0.0-beta20
-																				</a>
-																		</li>
-																</ul>
-														</div>
-												</div>
-										</div>
-								</footer>
+								</div>
 						</div>
-				</div>
-				<!-- Libs JS -->
-				<script src="/static/libs/list.js/dist/list.min.js?1692870487" defer></script>
-				<!-- Tabler Core -->
-				<script src="/static/js/tabler.min.js?1692870487" defer></script>
-				<script src="/static/js/demo.min.js?1692870487" defer></script>
-				<script>
+						<!-- Libs JS -->
+						<script src="/static/libs/list.js/dist/list.min.js?1692870487" defer></script>
+						<script src="/static/js/tabler.min.js?1692870487" defer></script>
+						<script src="/static/js/demo.min.js?1692870487" defer></script>
+						<script>
 						document.addEventListener("DOMContentLoaded", function() {
 								const list = new List('table-default', {
 										sortClass: 'table-sort',
@@ -139,7 +96,7 @@
 										]
 								});
 						})
-				</script>
+						</script>
 		</body>
 </html>
 
