--- a/views/monitor.html
+++ b/views/monitor.html
@@ -3,7 +3,7 @@
 		<head>
 		{{ template "base" . }}
 		</head>
-		{{ template "errors" }}
+		{{ template "errors" . }}
 		{{ template "modal-report" . }}
 		{{ template "email-alert" . }}
 		{{ template "webhook-alert" . }}
