--- a/views/projects-list-block.html
+++ b/views/projects-list-block.html
@@ -14,5 +14,8 @@
 		<td class="sort-name">
 				{{ createdAtDistanceWithAgo .CreatedAt.Time }}
 		</td>
+		<td class="sort-name">
+				{{ .MonitorCount }}
+		</td>
 </tr>
 {{ end }}
