--- a/views/base.html
+++ b/views/base.html
@@ -7,6 +7,9 @@
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="msapplication-config" content="/static/img/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
+{{ if .Monitor.Status }}
+		<title>UP - {{ .Monitor.Name }}</title>
+{{ end }}
 {{ end }}
 
 {{ define "warn-favicons" }}
@@ -18,6 +21,9 @@
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="msapplication-config" content="/static/img/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
+{{ if .Monitor.Status }}
+				<title>GRACE_PERIOD - {{ .Monitor.Name }}</title>
+{{ end }}
 {{ end }}
 
 {{ define "down-favicons" }}
@@ -29,6 +35,9 @@
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="msapplication-config" content="/static/img/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
+{{ if .Monitor.Status }}
+				<title>DOWN - {{ .Monitor.Name }}</title>
+{{ end }}
 {{ end }}
 
 {{ block "base" . }}
@@ -76,7 +85,7 @@ text-transform: uppercase;
 body {
 font-feature-settings: "cv03", "cv04", "cv11";
 }
-#user:hover {
+a {
 		cursor: pointer;
 }
 </style>
@@ -91,6 +100,7 @@ font-feature-settings: "cv03", "cv04", "cv11";
 								<a href="/">
 										<img src="/static/img/logo.svg" width="110" height="32" alt="outagealert.io" class="navbar-brand-image">
 								</a>
+								outagealert
 						</h1>
 						<div class="navbar-nav flex-row order-md-last">
 								<div class="d-none d-md-flex">
@@ -102,10 +112,15 @@ font-feature-settings: "cv03", "cv04", "cv11";
 												data-bs-placement="bottom">
 												<svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 12m-4 0a4 4 0 1 0 8 0a4 4 0 1 0 -8 0" /><path d="M3 12h1m8 -9v1m8 8h1m-9 8v1m-6.4 -15.4l.7 .7m12.1 -.7l-.7 .7m0 11.4l.7 .7m-12.1 -.7l-.7 .7" /></svg>
 										</a>
+										<a href="/pricing" class="nav-link" title="">
+												Pricing
+										</a>
 								</div>
 								<div id="user" class="nav-item dropdown" hx-trigger="load once" hx-get="/user" hx-swap="innerHTML"></div>
 						</div>
+
 				</div>
+
 		</header>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.x.x/dist/js/bootstrap.bundle.min.js"></script>
 		<script src="/static/js/demo-theme.min.js?1692870487"></script>
