--- a/views/confirm-password.html
+++ b/views/confirm-password.html
@@ -5,7 +5,7 @@
 								<img src="/static/img/logo.svg" width="110" height="32" alt="Tabler" class="navbar-brand-image">
 						</a>
 				</div>
-				{{ template "errors" }}
+				{{ template "errors" . }}
 				<div class="card card-md">
 						<div class="card-body">
 								<h2 class="h2 text-center mb-4">Reset your password</h2>
