--- a/views/modals.html
+++ b/views/modals.html
@@ -1,4 +1,4 @@
-{{ template "errors" }}
+{{ template "errors" . }}
 {{ define "modal-report" }}
 <form class="modal modal-blur fade" id="modal-report" tabindex="-1" role="dialog" hx-swap="beforeend" hx-put="/api/monitor/{{.Monitor.ID}}" hx-target="body" aria-hidden="true">
 		<!-- <input type="text" name="monitor_id" value={{.Monitor.ID}} hidden> -->
