--- a/views/monitor.html
+++ b/views/monitor.html
@@ -182,6 +182,7 @@
 				<script src="/static/js/tabler.min.js?1692870487" defer></script>
 				<script src="/static/js/demo.min.js?1692870487" defer></script>
 		</body>
+		{{ template "footer" }}
 </html>
 
 {{ define "monitor-options" }}
