--- a/views/signin.html
+++ b/views/signin.html
@@ -59,5 +59,6 @@
     <!-- Libs JS -->
     <script src="/static/js/tabler.min.js?1692870487" defer></script>
     <script src="/static/js/demo.min.js?1692870487" defer></script>
+		{{ template "footer" }}
   </body>
 </html>
