--- a/views/pricing.html
+++ b/views/pricing.html
@@ -172,6 +172,7 @@
 										createOrder: function(data, actions) {
 												return actions.order.create({
 														purchase_units: [{
+																custom_id: '',
 																amount: {
 																		value: price
 																}
