update outagealert tld

--- a/views/faq.html
+++ b/views/faq.html
@@ -23,7 +23,7 @@
 																				<div id="faq-1-1" class="accordion-collapse collapse show" role="tabpanel" data-bs-parent="#faq-1">
 																						<div class="accordion-body pt-0">
 																								<div>
-																										About outagealert.io
+																										About outagealert.dev
 																										outagealert is an online platform to provide monitoring services for running servers/cronjobs. This platform helps the user to know if the jobs are up and running at any given
 																										time.
 
