--- a/views/pricing.html
+++ b/views/pricing.html
@@ -4,7 +4,7 @@
 				<meta charset="UTF-8">
 				<meta name="viewport" content="width=device-width, initial-scale=1.0">
 				<title>Pricing - outagealert</title>
-				<script src="https://www.paypal.com/sdk/js?client-id=AfAkW96Dq4GDyP5DAScr9sSnRhr6IcbfO0Xt7EVOlAGbWjCKmSsFZXByCKoNC1RonV08p2bI-PezcEXg"></script>
+				<script src="https://www.paypal.com/sdk/js?client-id=AfXmSg_EyAbi0J13tuX5yy-ErT59xqXntYmRkSRF74JluM1Fnu7Q-1eOdBvVqKueD7cVWvOaKUxvHIc5"></script>
 				{{ template "base" }}
 		</head>
 		<body>
@@ -174,6 +174,7 @@
 														purchase_units: [{
 																custom_id: '',
 																amount: {
+																		currency_code: 'USD',
 																		value: price
 																}
 														}]
