--- a/views/signup-success.html
+++ b/views/signup-success.html
@@ -18,8 +18,7 @@
             </p>
           </div>
           <div class="text-center text-secondary mt-3">
-            Can't see the email? Please check the spam folder.<br />
-            Wrong email? Please <a href="/signup">re-enter your address</a>.
+            Can't see the email? Please check the spam folder or contact us at <a href="mailto:contact@outagealert.dev">contact@outagealert.dev</a><br />
           </div>
         </div>
       </div>
