--- a/views/signin.html
+++ b/views/signin.html
@@ -32,19 +32,13 @@
                   </span>
                 </label>
                 <div class="input-group input-group-flat">
-                  <input type="password" name="password" class="form-control"  placeholder="Your password"  autocomplete="off" required >
+                  <input id="passwordInput" type="password" name="password" class="form-control"  placeholder="Your password"  autocomplete="off" required >
                   <span class="input-group-text">
-                    <a href="#" class="link-secondary" title="Show password" data-bs-toggle="tooltip">
+                    <a href="#" id="showPasswordToggle" class="link-secondary" title="Show password" data-bs-toggle="tooltip">
                       <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M10 12a2 2 0 1 0 4 0a2 2 0 0 0 -4 0" /><path d="M21 12c-2.4 4 -5.4 6 -9 6c-3.6 0 -6.6 -2 -9 -6c2.4 -4 5.4 -6 9 -6c3.6 0 6.6 2 9 6" /></svg>
                     </a>
                   </span>
                 </div>
-              </div>
-              <div class="mb-2">
-                <label class="form-check">
-                  <input type="checkbox" class="form-check-input"/>
-                  <span class="form-check-label">Remember me on this device</span>
-                </label>
               </div>
               <div class="form-footer">
                 <button type="submit" class="btn btn-primary w-100">Sign in</button>
@@ -59,6 +53,24 @@
     <!-- Libs JS -->
     <script src="/static/js/tabler.min.js?1692870487" defer></script>
     <script src="/static/js/demo.min.js?1692870487" defer></script>
+		<script>
+document.addEventListener('DOMContentLoaded', function() {
+  const passwordInput = document.getElementById('passwordInput');
+  const showPasswordToggle = document.getElementById('showPasswordToggle');
+
+  showPasswordToggle.addEventListener('click', function(e) {
+    e.preventDefault();
+    if (passwordInput.type === 'password') {
+      passwordInput.type = 'text';
+      showPasswordToggle.title = 'Hide password';
+    } else {
+      passwordInput.type = 'password';
+      showPasswordToggle.title = 'Show password';
+    }
+  });
+});
+</script>
+
 		{{ template "footer" }}
   </body>
 </html>
