--- a/views/signup.html
+++ b/views/signup.html
@@ -34,9 +34,9 @@
             <div class="mb-3">
               <label class="form-label">Password</label>
               <div class="input-group input-group-flat">
-									<input name="password" type="password" class="form-control"  placeholder="Password" autocomplete="off" required>
+									<input id="passwordInput" name="password" type="password" class="form-control"  placeholder="Password" autocomplete="off" required>
                 <span class="input-group-text">
-                  <a href="#" class="link-secondary" title="Show password" data-bs-toggle="tooltip">
+                  <a href="#" id="showPasswordToggle" class="link-secondary" title="Show password" data-bs-toggle="tooltip">
                     <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M10 12a2 2 0 1 0 4 0a2 2 0 0 0 -4 0" /><path d="M21 12c-2.4 4 -5.4 6 -9 6c-3.6 0 -6.6 -2 -9 -6c2.4 -4 5.4 -6 9 -6c3.6 0 6.6 2 9 6" /></svg>
                   </a>
                 </span>
@@ -45,7 +45,7 @@
             <div class="mb-3">
               <label class="form-check">
                 <input type="checkbox" class="form-check-input" required/>
-                <span class="form-check-label">Agree the <a href="./terms-of-service.html" tabindex="-1">terms and policy</a>.</span>
+                <span class="form-check-label">Agree the <a href="/terms" tabindex="-1">terms and policy</a>.</span>
               </label>
             </div>
             <div class="form-footer">
@@ -61,6 +61,23 @@
     </div>
     <script src="/static/js/tabler.min.js?1692870487" defer></script>
     <script src="/static/js/demo.min.js?1692870487" defer></script>
+		<script>
+document.addEventListener('DOMContentLoaded', function() {
+  const passwordInput = document.getElementById('passwordInput');
+  const showPasswordToggle = document.getElementById('showPasswordToggle');
+
+  showPasswordToggle.addEventListener('click', function(e) {
+    e.preventDefault();
+    if (passwordInput.type === 'password') {
+      passwordInput.type = 'text';
+      showPasswordToggle.title = 'Hide password';
+    } else {
+      passwordInput.type = 'password';
+      showPasswordToggle.title = 'Show password';
+    }
+  });
+});
+</script>
 		{{ template "footer" }}
   </body>
 </html>
